# watch

111/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
111/components/co5300_panel/: CMakeLists.txt  co5300_panel.c  co5300_panel_defaults.h
111/components/co5300_panel/include/: co5300_panel.h
111/components/get_time/: CMakeLists.txt  get_time.c  get_time.h
111/components/lvgl_port/: CMakeLists.txt  lvgl_port.c
111/components/lvgl_port/include/: lvgl_port.h
111/components/sd_card/: CMakeLists.txt  sd_manager.c  sd_manager.h
111/components/touch_ft5x06/: CMakeLists.txt  touch_ft5x06.c
111/components/touch_ft5x06/include/: touch_ft5x06.h
111/components/z_print_esp32/: CMakeLists.txt  printf_esp32.c  printf_esp32.h
111/main/: 111.c  CMakeLists.txt  hptts.c  hptts.h  idf_component.yml  lvgl_task.c  lvgl_task.h  simple_wifi_sta.c  time_weather.c  time_weather.h
111/main/ui/custom/: clock_functions.c  clock_functions.h  custom.c  custom.h  scroll_functions.c  scroll_functions.h
